[IMP][WIP] Python code tester was added in development tools
## KNOWN BUGS

- Code tester fails working with non ascii characters.
- Models by groups fails

--- a/modules/development_tools/wizard/dev_domain_tester.xml
+++ b/modules/development_tools/wizard/dev_domain_tester.xml
@@ -13,20 +13,29 @@
             <field name="active" eval="True" />
             <field name="arch" type="xml">
                 <form string="Caption" create="1" delete="1" edit="1">
-                    <group col="4">
-                        <field name="model_id"/>
-                        <field name="view_id" />
-                    </group>
-                    <group>
-                        <field name="domain_string" widget="text" />
-                    </group>
-                    <group>
-                        <field name="context_string" widget="text" />
-                    </group>
-                    <footer>
-                        <button name="cmd_execute" string="Execute" type="object" class="oe_highlight"/> or
-                        <button special="cancel" string="Cancel" class="oe_link"/>
-                    </footer>
+                    <header>
+                        <button name="cmd_execute" string="Execute" type="object" class="oe_highlight"/>
+                    </header>
+                    <div style="margin-top: 2em;">
+                        <group col="4">
+                            <field name="model_id"/>
+                            <field name="view_id" />
+                        </group>
+                        <group col="2">
+                            <field name="domain_string" widget="text" />
+                        </group>
+                        <group col="2">
+                            <field name="context_string" widget="text" />
+                        </group>
+                        <group string="Help" col="2" style="margin-top: 1em;" invisible="1">
+                            <group>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet scelerisque risus. Curabitur et viverra ex. Morbi pretium ipsum velit. Proin sagittis elit at dui euismod, sit amet maximus velit hendrerit. Fusce faucibus ante id dui commodo faucibus. Nulla placerat, quam a laoreet iaculis, lacus elit feugiat ex, et porta eros arcu quis dolor. Praesent convallis mauris imperdiet risus tristique laoreet a eget orci. Ut placerat eleifend elit, eu auctor eros auctor at. Nam vulputate, turpis ac vulputate vulputate, nisi enim imperdiet augue, id luctus ipsum felis et mi. Proin tincidunt posuere quam, et scelerisque nisi lacinia imperdiet. Vivamus dignissim maximus enim sed tristique. Nam feugiat ultrices luctus. Aliquam quis nulla a odio rhoncus interdum eget vel nisl. Nunc gravida eros turpis, at tempus diam posuere vitae. Curabitur efficitur aliquet malesuada. Proin tortor sapien, tempor iaculis lacus eu, euismod tempor purus.</p>
+                            </group>
+                            <group>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet scelerisque risus. Curabitur et viverra ex. Morbi pretium ipsum velit. Proin sagittis elit at dui euismod, sit amet maximus velit hendrerit. Fusce faucibus ante id dui commodo faucibus. Nulla placerat, quam a laoreet iaculis, lacus elit feugiat ex, et porta eros arcu quis dolor. Praesent convallis mauris imperdiet risus tristique laoreet a eget orci. Ut placerat eleifend elit, eu auctor eros auctor at. Nam vulputate, turpis ac vulputate vulputate, nisi enim imperdiet augue, id luctus ipsum felis et mi. Proin tincidunt posuere quam, et scelerisque nisi lacinia imperdiet. Vivamus dignissim maximus enim sed tristique. Nam feugiat ultrices luctus. Aliquam quis nulla a odio rhoncus interdum eget vel nisl. Nunc gravida eros turpis, at tempus diam posuere vitae. Curabitur efficitur aliquet malesuada. Proin tortor sapien, tempor iaculis lacus eu, euismod tempor purus.</p>
+                            </group>
+                        </group>
+                    </div>
                 </form>
             </field>
         </record>
@@ -37,7 +46,7 @@
             <field name="res_model">dev.domain.tester</field>
             <field name="view_mode">form</field>
             <field name="view_type">form</field>
-            <field name="target">new</field>
+            <field name="target">inline</field>
             <field name="limit" eval="80" />
             <field name="domain">[]</field>
             <field name="context">{}</field>
