--- a/modules/development_tools/wizard/dev_code_tester.xml
+++ b/modules/development_tools/wizard/dev_code_tester.xml
@@ -54,7 +54,7 @@
             <field name="view_type">form</field>
             <field name="target">inline</field>
             <field name="limit" eval="80" />
-            <field name="code">[]</field>
+            <field name="domain">[]</field>
             <field name="context">{}</field>
             <field name="auto_search" eval="True" />
         </record>
