--- a/modules/development_tools/views/report_groups_models.xml
+++ b/modules/development_tools/views/report_groups_models.xml
@@ -19,12 +19,57 @@
             <field name="active" eval="True" />
             <field name="arch" type="xml">
                 <graph string="Models by group" type="pivot">
-                    <field type="row" name="group_category_id" />
-                        <field type="row" name="group_name" />
-                    <field type="col" name="model_name" />
+                    <field type="row" name="group_fully_qualified_xml_id" />
+                    <field type="col" name="model_fully_qualified_xml_id" />
                     <field type="measure" name="crud" />
                 </graph>
             </field>
+        </record>
+
+        <!-- Custom reports (aka filters) -->
+        <record model="ir.filters" id="filter_report_groups_models_group_by_categories">
+            <field name="name">By categories</field>
+            <field name="model_id">report.groups.models</field>
+            <field name="user_id" eval="False"/>
+            <field name="domain">[]</field>
+            <field name="context">{'group_by': ['group_category_id', 'group_name'], 'col_group_by': ['model_name'], 'measures': ['crud']}</field>
+            <field name="is_default" eval="False" />
+        </record>
+
+        <record model="ir.filters" id="filter_report_groups_models_group_by_module">
+            <field name="name">By modules</field>
+            <field name="model_id">report.groups.models</field>
+            <field name="user_id" eval="False"/>
+            <field name="domain">[]</field>
+            <field name="context">{'group_by': ['group_module_id', 'group_name'], 'col_group_by': ['model_module_id', 'model_name'], 'measures': ['crud']}</field>
+            <field name="is_default" eval="False" />
+        </record>
+
+       <record model="ir.filters" id="filter_report_groups_models_categories_external">
+            <field name="name">By categories  (External)</field>
+            <field name="model_id">report.groups.models</field>
+            <field name="user_id" eval="False"/>
+            <field name="domain">[]</field>
+            <field name="context">{'group_by': ['group_category_fully_qualified_xml_id', 'group_fully_qualified_xml_id'], 'col_group_by': ['model_fully_qualified_xml_id'], 'measures': ['crud']}</field>
+            <field name="is_default" eval="False" />
+        </record>
+
+       <record model="ir.filters" id="filter_report_groups_models_modules_external">
+            <field name="name">By modules (External)</field>
+            <field name="model_id">report.groups.models</field>
+            <field name="user_id" eval="False"/>
+            <field name="domain">[]</field>
+            <field name="context">{'group_by': ['group_module_xml_id', 'group_xml_id'], 'col_group_by': ['model_module_xml_id', 'model_xml_id'], 'measures': ['crud']}</field>
+            <field name="is_default" eval="False" />
+        </record>
+
+        <record model="ir.filters" id="filter_report_groups_models_identifiers">
+            <field name="name">By database IDs</field>
+            <field name="model_id">report.groups.models</field>
+            <field name="user_id" eval="False"/>
+            <field name="domain">[]</field>
+            <field name="context">{'group_by': ['group_id'], 'col_group_by': ['model_id'], 'measures': ['crud']}</field>
+            <field name="is_default" eval="False" />
         </record>
 
         <!-- Models by group search view for graph -->
