--- a/modules/development_tools/wizard/dev_code_tester.xml
+++ b/modules/development_tools/wizard/dev_code_tester.xml
@@ -21,8 +21,15 @@
                             <field name="code" widget="text" nolabel="1" />
                         </group>
                         <group col="4">
-                            <field name="is_action" />
-                            <field name="model_id" attrs="{'readonly': [('is_action', '&lt;&gt;', True)]}" />
+                            <group col="2" colspan="2">
+                                <field name="model_id" />
+                            </group>
+                            <group>
+                                <separator />
+                            </group>
+                            <group col="2">
+                                <field name="is_action" class="or_right" />
+                            </group>
                         </group>
                         <notebook string="Help" style="margin-top: 1em;">
                             <page string="Output">
