--- a/modules/development_tools/wizard/development_tools_config_settings.xml
+++ b/modules/development_tools/wizard/development_tools_config_settings.xml
@@ -20,8 +20,13 @@
                             name="cancel" class="oe_link"/>
                     </header>
                     <group string="Email capture" col="4">
-                            <field name="email_capture"/>
-                            <field name="email_to"/>
+                        <field name="email_capture"/>
+                        <field name="email_to"/>
+                    </group>
+                    <group string="Developing modules" col="4">
+                        <field name="developing_modules_enabled" />
+                        <field name="search_default_app" />
+                        <field name="developing_module_ids" widget="many2many_tags" colspan="4"/>
                     </group>
                 </form>
             </field>
