--- a/modules/soccer_sweepstake/views/soccer_season.xml
+++ b/modules/soccer_sweepstake/views/soccer_season.xml
@@ -12,7 +12,7 @@
             <field name="active" eval="True" />
             <field name="arch" type="xml">
                 <tree string="Soccer season" create="1" delete="1" edit="1">
-                    <field name="name" />
+                    <field name="shortdesc" />
                     <field name="begin_date" />
                     <field name="end_date" />
                 </tree>
@@ -30,8 +30,8 @@
                 <form string="Soccer season" create="1" delete="1" edit="1">
                     <sheet>
                         <div class="oe_title">
-                            <label for="name" class="oe_edit_only"/>
-                            <h1><field name="name" placeholder="Name of the season..."/></h1>
+                            <label for="shortdesc" class="oe_edit_only"/>
+                            <h1><field name="shortdesc" placeholder="Name of the season..."/></h1>
                         </div>
                         <group col="4">
                             <field name="begin_date" />
