--- a/modules/development_tools/wizard/development_tools_config_settings.xml
+++ b/modules/development_tools/wizard/development_tools_config_settings.xml
@@ -23,10 +23,13 @@
                         <field name="email_capture"/>
                         <field name="email_to"/>
                     </group>
-                    <group string="Developing modules" col="4">
+                    <group string="Local modules filter" col="4">
                         <field name="developing_modules_enabled" />
                         <field name="search_default_app" />
                         <field name="developing_module_ids" widget="many2many_tags" colspan="4"/>
+                    </group>
+                    <group string="Development mode" col="4">
+                        <field name="development_mode"/>
                     </group>
                 </form>
             </field>
