--- a/modules/soccer_sweepstake/views/soccer_league_template.xml
+++ b/modules/soccer_sweepstake/views/soccer_league_template.xml
@@ -28,14 +28,15 @@
             <field name="active" eval="True" />
             <field name="arch" type="xml">
                 <form string="League templates" create="1" delete="1" edit="1">
+                    <field name="id" invisible="1" />
                     <sheet>
                         <div class="oe_title">
                             <label for="name" class="oe_edit_only"/>
                             <h1><field name="name" placeholder="Name of the league..."/></h1>
                         </div>
                         <group col="4" style="margin-top: 1em">
-                            <field name="kind" />
-                            <field name="country_id" attrs="{'invisible': [('kind','&lt;&gt;', 'NLC')]}" />
+                            <field name="kind" attrs="{'readonly': [('id', '>', 0)]}"/>
+                            <field name="country_id" attrs="{'readonly': [('id', '>', 0)], 'invisible': [('kind','&lt;&gt;', 'NLC')]}" />
                         </group>
                         <notebook>
                             <page string="Leagues">
@@ -60,6 +61,9 @@
             <field name="active" eval="True" />
             <field name="arch" type="xml">
                 <search string="League templates">
+                    <field name="name" />
+                    <field name="country_id" />
+                    <field name="kind" />
                     <group expand="1" string="Group By...">
                         <filter string="Country"
                             domain="[]"
