--- a/modules/development_tools/views/ir_ui_menu.xml
+++ b/modules/development_tools/views/ir_ui_menu.xml
@@ -18,7 +18,7 @@
 
         <record model="ir.ui.menu" id="menu_technical_reporting" >
             <field name="name">Technical Reporting</field>
-            <field name="parent_id" ref="base.menu_reporting" />
+            <field name="parent_id" ref="menu_developement_tools" />
             <field name="sequence" eval="10" />
             <field name="groups_id" eval="[(4, ref('base.group_no_one'))]" />
         </record>
