[WIP] Working on academy_tests
# Things to do

- [x] Quit ``description`` field from all the tree views.
- [x] Button to open ``at.answer`` form view from tree view.
- [x] Make editable the ``at.category`` tree view inside the ``at.topic`` form view.
- [x] Build different tree views to be used in x2may fields to: ``at.category`` and ``at.answer``
- [x] Alternative texts for questions and answers
- [x] Create model ir.resource or use ir.attachment (ir.attachment allow use them as mail atachment)
- [x] Levels default view without sequence, another view with sequence to be used in menu
- [x] Category default view without sequence, another view with sequence to be used into the topic form view
- [ ] Finish ``at.test.builder.wizard`` dynamic categories domain

## Settings

- [ ] Default ``at_level``
- [ ] Default ``Neither answer is correct`` text
- [ ] Default texts for: first, second, third, ...

## Tests

> Wizard should use two models, a header model and a line model.
> Each one line should has:
>   - ``field.Reference`` will allow user to choose between at.topic, at.category, at.tag and at.level
>   - ``field.Selection`` to choose between "and" or "or" (How the parentheses act?)
>   - number of questions to add

- [ ] Answer maximun limit: 9
- [ ] Number of tests to build
- [-] Choose number of questions by test of in set
- [-] One page with rules to include items and another to exclude them.
- [ ] One page to manually include and exclude questions.
- [-] Number of extra questions (de reserva).
- [-] Number of answer by question.
- [-] Allow questions without any right answer.
- [-] Allow more than right answers by question.
- [-] Allow to fill questions with answers from other questions.
- [ ] Allow to manually build tests choosing existing questions or adding new.

## Future

- [ ] Inverse questions: choose the wrong answer
- [ ] Add ``fields.Boolena`` to choose between share or not the attachment
- [ ] Add computed ``short_name`` field to questions and answers.
-

--- a/modules/academy_tests/views/at_answer_view.xml
+++ b/modules/academy_tests/views/at_answer_view.xml
@@ -23,11 +23,29 @@
             <field name="priority" eval="16" />
             <field name="active" eval="True" />
             <field name="arch" type="xml">
-                <tree string="at_answer_tree" create="1" delete="1" edit="1" editable="bottom">
-                    <field name="sequence" widget="handle" />
-                    <field name="name" class="oe_field_name" />
+                <tree string="at_answer_tree" create="1" delete="1" edit="1">
                     <field name="is_correct" class="oe_field_is_correct" />
-                    <field name="description" class="oe_field_description" />
+                    <field name="name" class="oe_field_name" />
+                </tree>
+            </field>
+        </record>
+
+        <record id="view_at_answer_tree_x2many" model="ir.ui.view">
+            <field name="name">view.at.answer.tree.x2many</field>
+            <field name="model">at.answer</field>
+            <field name="type">tree</field>
+            <field name="mode">primary</field>
+            <field name="priority" eval="16" />
+            <field name="active" eval="True" />
+            <field name="arch" type="xml">
+                <tree string="at_answer_tree" create="1" delete="1" edit="1"
+                    editable="bottom" class="view_at_answer_tree_x2many">
+                    <field name="sequence" class="oe_field_sequence" widget="handle"/>
+                    <field name="is_correct" class="oe_field_is_correct" string="C" />
+                    <field name="name" class="oe_field_name"
+                        placeholder="Enter text for name" />
+                    <button name="cmd_open_in_form" string="&#xF044;"
+                         type="object" help="Open in form view" />
                 </tree>
             </field>
         </record>
@@ -52,9 +70,16 @@
                         </div>
                         <group col="2">
                             <field name="is_correct" class="oe_field_is_correct" />
-                            <field name="description" class="oe_field_description"
-                                placeholder="Enter the text for description" />
                         </group>
+                        <notebook>
+                            <page string="Alternative wording" class="oe_page_alternative_wording" accesskey="L">
+                                <field name="alternative_wording_ids" class="oe_field_alternative_wording_ids" />
+                            </page>
+                            <page string="Description" class="oe_page_description" accesskey="D">
+                                <field name="description" class="oe_field_description"
+                                    placeholder="Enter the text for description" />
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
