--- a/modules/academy_tests/views/at_tag_view.xml
+++ b/modules/academy_tests/views/at_tag_view.xml
@@ -23,9 +23,8 @@
             <field name="priority" eval="16" />
             <field name="active" eval="True" />
             <field name="arch" type="xml">
-                <tree string="at_tag_tree" create="1" delete="1" edit="1">
-                    <field name="name" />
-                    <field name="description" />
+                <tree string="at_tag_tree" create="1" delete="1" edit="1" >
+                    <field name="name" class="oe_field_name" />
                 </tree>
             </field>
         </record>
